Delete temporary files

--- a/Site/src/home.html
+++ b/Site/src/home.html
@@ -34,7 +34,7 @@
 					</div>
 					
 					<div class='content-tile-img'>
-						<img src='..\..\Articles\Sports\NBA\3-pointers\thumbnail1.png'>
+						<img src='../../Articles/Sports/NBA/3-pointers/thumbnail1.png'>
 					</div>
 					<div class='content-tile-header-title content-tile-title-red'>
 						How Analytics Has Changed the NBA
@@ -49,22 +49,22 @@
 					<div class='list-group content-tile-list'>
 						<a href="#" class="list-group-item">
 							<h4 class="list-group-item-heading">Annual Budgeting</h4>
-							<img src='..\icons\excel.png' class="list-group-item-img img-thumbnail">
+							<img src='../icons/excel.png' class="list-group-item-img img-thumbnail">
 							<p class="list-group-item-text">Plan your expenses and retirement<span class='useful-file'>Useful</span></p>
 						</a>
 						<a href="#" class="list-group-item">
 							<h4 class="list-group-item-heading">Five Year Letter</h4>
-							<img src='..\icons\word.png' class="list-group-item-img img-thumbnail">
+							<img src='../icons/word.png' class="list-group-item-img img-thumbnail">
 							<p class="list-group-item-text">A time capsule to yourself<span class='useful-file'>Useful</span></p>
 						</a>
 						<a href="#" class="list-group-item">
 							<h4 class="list-group-item-heading">Dots and Boxes</h4>
-							<img src='..\icons\powerpoint.png' class="list-group-item-img img-thumbnail">
+							<img src='../icons/powerpoint.png' class="list-group-item-img img-thumbnail">
 							<p class="list-group-item-text">A strategy to never lose again<span class='fun-file'>Fun</span></p>
 						</a>
 						<a href="#" class="list-group-item">
 							<h4 class="list-group-item-heading">Challenging Riddles</h4>
-							<img src='..\icons\youtube.png' class="list-group-item-img img-thumbnail">
+							<img src='../icons/youtube.png' class="list-group-item-img img-thumbnail">
 							<p class="list-group-item-text">A playlist of riddles from TED Talks<span class='fun-file'>Fun</span></p>
 						</a>
 					</div>
@@ -78,7 +78,7 @@
 						About Me
 					</div>
 					<div class='content-tile-img'>
-						<img src='images\resume1b.png' style='border: black solid thin; border-right: 0; border-bottom: 0'>
+						<img src='images/resume1b.png' style='border: black solid thin; border-right: 0; border-bottom: 0'>
 					</div>
 					<div class='content-tile-title'>
 						My Resume
@@ -95,7 +95,7 @@
 							<div class='row'>
 								<div class='col-sm-11 col-sm-offset-1 content-tile-subitem content-clickable'>
 									<div class='content-tile-img'>
-										<img src='..\..\Articles\Popourri\About_this_blog\thumbnail.png'>
+										<img src='../../Articles/Popourri/About_this_blog/thumbnail.png'>
 									</div>
 									<div class='content-tile-subitem-title'>
 										About This Blog
@@ -107,7 +107,7 @@
 							<div class='row'>
 								<div class='col-sm-11 col-sm-offset-1 content-tile-subitem content-clickable'>
 									<div class='content-tile-img'>
-										<img src='..\..\Articles\Education\Methods of Evaluation\thumbnail.png'>
+										<img src='../../Articles/Education/Methods of Evaluation/thumbnail.png'>
 									</div>
 									<div class='content-tile-subitem-title'>
 										American Education is Flawed
@@ -119,7 +119,7 @@
 							<div class='row'>
 								<div class='col-sm-11 col-sm-offset-1 content-tile-subitem content-clickable'>
 									<div class='content-tile-img'>
-										<img src='..\..\Articles\Sports\MLB\GreatestSport\thumbnail.png'>
+										<img src='../../Articles/Sports/MLB/GreatestSport/thumbnail.png'>
 									</div>
 									<div class='content-tile-subitem-title'>
 										Why Baseball is the Greatest Sport
@@ -148,19 +148,19 @@
 						<div class='col-xs-6'>
 							<div class='legend-list-left'>
 								<div class='legend-list-item content-clickable'>
-									<img src='..\icons\html5.png' class="list-group-item-img img-thumbnail">
+									<img src='../icons/html5.png' class="list-group-item-img img-thumbnail">
 									<span>HTML 5</span>
 								</div>
 								<div class='legend-list-item content-clickable'>
-									<img src='..\icons\css3.png' class="list-group-item-img img-thumbnail">
+									<img src='../icons/css3.png' class="list-group-item-img img-thumbnail">
 									<span>CSS 3</span>
 								</div>
 								<div class='legend-list-item content-clickable'>
-									<img src='..\icons\javascript.png' class="list-group-item-img img-thumbnail">
+									<img src='../icons/javascript.png' class="list-group-item-img img-thumbnail">
 									<span>JavaScript</span>
 								</div>
 								<div class='legend-list-item content-clickable'>
-									<img src='..\icons\bootstrap.png' class="list-group-item-img img-thumbnail">
+									<img src='../icons/bootstrap.png' class="list-group-item-img img-thumbnail">
 									<span>Bootstrap</span>
 								</div>
 							</div>
@@ -168,23 +168,23 @@
 						<div class='col-xs-6'>
 							<div class='legend-list-right'>
 								<div class='legend-list-item content-clickable'>
-									<img src='..\icons\python.png' class="list-group-item-img img-thumbnail">
+									<img src='../icons/python.png' class="list-group-item-img img-thumbnail">
 									<span>Python 3</span>
 								</div>
 								<div class='legend-list-item content-clickable'>
-									<img src='..\icons\Notepad_plus_plus.png' class="list-group-item-img img-thumbnail">
+									<img src='../icons/Notepad_plus_plus.png' class="list-group-item-img img-thumbnail">
 									<span>Notepad++</span>
 								</div>
 								<div class='legend-list-item content-clickable'>
-									<img src='..\icons\php.png' class="list-group-item-img img-thumbnail">
+									<img src='../icons/php.png' class="list-group-item-img img-thumbnail">
 									<span>PHP</span>
 								</div>
 								<div class='legend-list-item content-clickable'>
-									<img src='..\icons\excel.png' class="list-group-item-img img-thumbnail">
+									<img src='../icons/excel.png' class="list-group-item-img img-thumbnail">
 									<span>Excel 2016</span>
 								</div>
 								<div class='legend-list-item content-clickable'>
-									<img src='..\icons\word.png' class="list-group-item-img img-thumbnail">
+									<img src='../icons/word.png' class="list-group-item-img img-thumbnail">
 									<span>Word 2016</span>
 								</div>
 							</div>
