--- a/Site/src/aboutme.html
+++ b/Site/src/aboutme.html
@@ -15,7 +15,7 @@
 	<nav class="navbar navbar-fixed-top">
 		<div class="header container-fluid">
 			<div class="navbar-header">
-				<img src="images/logo_new.png" alt="Justyn Lee Logo" height="50" width="50" style="margin:auto">
+				<img src="images/logo_new.PNG" alt="Justyn Lee Logo" height="50" width="50" style="margin:auto">
 				<span class='col offset-1 title_sub'>Helping you learn something new every day...</span>
 			</div>
 			<ul class="nav navbar-nav navbar-right">
@@ -29,10 +29,10 @@
 	<div class="container-fluid main">
 		<div class='row'>
 			<div class='content-resume col-md-10 col-md-offset-1'>
-				<img src='images/resume1b.png' alt="Resume part 1" width="100%">
-				<img src='images/resume2b.png' alt="Resume part 2" width="100%">
-				<img src='images/resume3b.png' alt="Resume part 3" width="100%">
-				<img src='images/resume4b.png' alt="Resume part 4" width="100%">
+				<img src='images/resume1b.PNG' alt="Resume part 1" width="100%">
+				<img src='images/resume2b.PNG' alt="Resume part 2" width="100%">
+				<img src='images/resume3b.PNG' alt="Resume part 3" width="100%">
+				<img src='images/resume4b.PNG' alt="Resume part 4" width="100%">
 			</div>
 		</div>
 	</div>
