--- a/Site/src/home.html
+++ b/Site/src/home.html
@@ -34,7 +34,7 @@
 					</div>
 					
 					<div class='content-tile-img'>
-						<img src='../../Articles/Sports/NBA/3-pointers/thumbnail1.png'>
+						<img src='../../Articles/Sports/NBA/3-pointers/Thumbnail1.png'>
 					</div>
 					<div class='content-tile-header-title content-tile-title-red'>
 						How Analytics Has Changed the NBA
@@ -107,7 +107,7 @@
 							<div class='row'>
 								<div class='col-sm-11 col-sm-offset-1 content-tile-subitem content-clickable'>
 									<div class='content-tile-img'>
-										<img src='../../Articles/Education/Methods of Evaluation/thumbnail.png'>
+										<img src='../../Articles/Education/Methods of Evaluation/Thumbnail.PNG'>
 									</div>
 									<div class='content-tile-subitem-title'>
 										American Education is Flawed
