--- a/Site/src/site_header.html
+++ b/Site/src/site_header.html
@@ -1,6 +1,7 @@
+<link rel="shortcut icon" href="../favicon.ico" type="image/x-icon" />
 <div class="header container-fluid">
 	<div class="navbar-header">
-		<img src="images/logo_new.png" alt="Justyn Lee Logo" height="50" width="50" style="margin:auto">
+		<img src="images/logo_new.PNG" alt="Justyn Lee Logo" height="50" width="50" style="margin:auto">
 		<span class='col offset-1 title_sub'>Helping you learn something new every day...</span>
 	</div>
 	<ul class="nav navbar-nav navbar-right">
